# cherryrgb-rs

./: COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RESEARCH.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  new-ci.yml
cherryrgb/: Cargo.toml  README.md
cherryrgb/src/: extensions.rs  lib.rs  models.rs  vkbd.rs
docs/: COMPATIBILITY.md  PROTOCOL.md  UHID-driver.md  cherryrgb_cli.md  cherryrgb_ncli.md  cherryrgb_service.md
examples/: color_profile.json  red_f12.json  static_rainbow.json  white_f12.json
ncli/: Cargo.toml
ncli/src/: main.rs  ncli.rs
service/: Cargo.toml
service/etc/default/: cherryrgb
service/etc/systemd/system/: cherryrgb.service
service/src/: main.rs  service.rs
src/: cli.rs  common.rs  commonargs.rs  main.rs  state.rs
udev/: 99-cherryrgb-service.rules  99-cherryrgb.rules
xtask/: Cargo.toml
xtask/src/: main.rs
