[package]
name = "cherryrgb_cli"
version.workspace = true
edition.workspace = true
publish = false

[features]
uhid = ["cherryrgb/uhid"]

[workspace]
members = [
    "service",
    "ncli",
    "cherryrgb"
]

[workspace.package]
version = "0.2.6"
edition = "2018"
publish = false

[dependencies]
cherryrgb = { path = "cherryrgb" }
anyhow = "1.0"
structopt = "0.3"
log = "0.4"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]
