[package]
name = "cherryrgb_cli"
description = "Test tool for Cherry RGB Keyboard"
version.workspace = true
edition.workspace = true
publish = false

[features]
uhid = ["cherryrgb/uhid"]

[workspace]
members = [
    "cherryrgb",
    "ncli",
    "service",
    "xtask"
]

[workspace.package]
version = "0.2.8"
edition = "2018"
publish = false

[dependencies]
cherryrgb = { path = "cherryrgb" }
clap = { version = "4.3.1", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0"
log = "0.4"
serde_json = "1.0.96"
dirs = "5.0.1"
regex = "1.8.4"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]
