[package]
name = "cherryrgb"
version = "0.2.0"
edition = "2018"
description = "Cherry RGB keyboard instrumentation"
repository = "https://github.com/skraus-dev/cherryrgb-rs"
license = "MIT"
homepage = "https://github.com/skraus-dev/cherryrgb-rs"

[dependencies]
anyhow = "1.0"
binrw = "0.8"
hex = "0.4"
log = "0.4"
rgb = "0.8"
rusb = "0.9"
