[package]
name = "cherryrgb"
version = "0.2.4"
edition = "2018"
description = "Cherry RGB keyboard instrumentation"
repository = "https://github.com/skraus-dev/cherryrgb-rs"
license = "MIT"
homepage = "https://github.com/skraus-dev/cherryrgb-rs"

[dependencies]
thiserror = "1"
binrw = "0.8"
hex = "0.4"
log = "0.4"
rgb = "0.8"
rusb = "0.9"
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0"
