[package]
name = "cherryrgb_ncli"
version = "0.2.3"
edition = "2018"
publish = false

[dependencies]
cherryrgb = { path = "../cherryrgb" }
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
serde_json = "1.0.96"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]
