[package]
name = "cherryrgb_ncli"
description = "Client for service-based Cherry RGB Keyboard"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
cherryrgb = { path = "../cherryrgb" }
clap = { version = "4.3.1", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0"
log = "0.4"
serde_json = "1.0.96"
dirs = "5.0.1"
regex = "1.8.4"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]
