[package]
name = "cherryrgb_service"
version = "0.2.3"
edition = "2018"
publish = false

[dependencies]
cherryrgb = { path = "../cherryrgb" }
anyhow = "1.0"
structopt = "0.3"
log = "^0.4.17"
ctrlc = { version = "3.2.5", features = ["termination"] }
serde_json = "1.0.96"
rgb = { version = "0.8", features = ["serde"] }
file-mode = "0.1.2"
nix = "0.26.2"
systemd-journal-logger = "0.7.0"

[dependencies.simple_logger]
version = "1.13"
default-features = false
