[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anstream = "0.3.2"
cargo_toml = "0.15.3"
cherryrgb = { path = "../cherryrgb" }
clap = { version = "4.3.1", features = ["derive"] }
clap-markdown = "0.1.3"
clap_complete = "4.3.1"
clap_mangen = "0.2.12"
owo-colors = "3.5.0"
serde_json = "1.0.96"
